src/snapshot_middleware/snapshots/librojo__snapshot_middleware__csv__test__csv_from_vfs.snap
---
source: src/snapshot_middleware/csv.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo.csv
  relevant_paths:
    - /foo.csv
    - /foo.meta.json
  context: {}
  debug_id: ~
name: foo
class_name: LocalizationTable
properties:
  Contents:
    String: "[{\"key\":\"Ack\",\"example\":\"An exclamation of despair\",\"source\":\"Ack!\",\"values\":{\"es\":\"¡Ay!\"}}]"
children: []
ignore_children: false

